# ikkyu_sokuho_data

./: .gitignore  README.md  deploy.sh  env.yaml  main.py  pyproject.toml  requirements.txt  run.py  run.sh
config/: config_column.yaml  config_exec.yaml  config_path.yaml  config_schedule.yaml  config_table.yaml  config_team.yaml  config_url.yaml
data/tsv/games/: lake_game.tsv
notebook/: test_getting_data.ipynb  test_load_to_bigquery.ipynb  test_make_datamart.ipynb
src/: confg.py  config.py  db_connection.py  line_notify.py  scraping.py  scraping_base.py  scraping_game.py  scraping_player.py  team.py
src/query/: inning.sql
