[tool.poetry]
name = "sponavi"
version = "0.1.0"
description = ""
authors = ["fujitako03 <thisis.snsd03@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
numpy = "^1.20.1"
beautifulsoup4 = "^4.9.3"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
